[package]
name = "grokipedia-x"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xai-rs = { path = "../xai-rs" }
dotenvy = "0.15.7"
tonic = "0.14.2"
futures = "0.3"
redis = { version = "0.25", features = ["tokio-comp"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
